jenkins-enable-docker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
  namespace: jenkins
spec:
  template:
    spec:
      containers:
        - name: jenkins
          # note: keep the existing image (we are patching only volumes & securityContext)
          volumeMounts:
            - name: docker-bin
              mountPath: /usr/local/bin
            - name: docker-sock
              mountPath: /var/run/docker.sock
          securityContext:
            runAsUser: 0
      volumes:
        - name: docker-bin
          emptyDir: {}
        - name: docker-sock
          hostPath:
            path: /var/run/docker.sock
            type: File
